tests/miz/pass/clusters/pass_clusters_basic_registration_001.miz
registration
  cluster empty -> finite for set;
end;
