tests/miz/fail/clusters/fail_clusters_hidden_transitive_expansion_001.miz
registration
  cluster small -> medium for set;
  cluster medium -> large for set;
  cluster large -> small for set;
end;
